# Stoix

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  flashbax_traj_buffer_test.ipynb  mkdocs.yml  plotting.ipynb  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  investigation_internal.md
.github/workflows/: performance_tests.yml  run_algs.yaml  test_linters.yaml
bash_scripts/: create_conda_env.sh  install_conda.sh  run-algorithms.sh
docs/: CONTRIBUTING.md  index.md
docs/community/: contributing.md
docs/css/: custom.css
docs/envs/: jaxarc.md  kinetix.md
docs/get_started/: hyperparameter_tuning.md  installation.md  quickstart.md  resuming_training.md  statistical_tests.md
docs/rl_algorithms/: c51.md  ddpg.md  ddqn.md  dqn.md  dueling_dqn.md  mdqn.md  noisyDQN.md  noisy_dqn.md  overview.md  ppo.md  qr_dqn.md  rainbow_dqn.md  reinforce.md  td3.md
plotting/: plotting.ipynb  pull_wandb_files.py
requirements/: requirements-dev.txt  requirements.txt
stoix/: base_types.py  evaluator.py  slurm_launcher.py  types.py
stoix/configs/: default_ff_awr.yaml  default_ff_awr_continuous.yaml  default_ff_az.yaml  default_ff_c51.yaml  default_ff_d4pg.yaml  default_ff_ddpg.yaml  default_ff_ddqn.yaml  default_ff_dpo_continuous.yaml  default_ff_dqn_reg.yaml  default_ff_dueling_dqn.yaml  default_ff_mdqn.yaml  default_ff_mpo.yaml  default_ff_mpo_continuous.yaml  default_ff_mz.yaml  default_ff_noisy_dqn.yaml  default_ff_ppo.yaml  default_ff_ppo_continuous.yaml  default_ff_qr_dqn.yaml  default_ff_rainbow.yaml  default_ff_reinforce.yaml  default_ff_reinforce_continuous.yaml  default_ff_sac.yaml  default_ff_sac_continuous.yaml  default_ff_sampled_az.yaml  default_ff_sampled_mz.yaml  default_ff_stochastic_mz.yaml  default_ff_td3.yaml  default_ff_vmpo.yaml  default_ff_vmpo_continuous.yaml  default_muzero.yaml  default_rec_ppo.yaml  hyperparameter_sweep.yaml
stoix/configs/arch/: anakin.yaml  anakin_debug.yaml  anakin_exp.yaml  sebulba.yaml
stoix/configs/launcher/: slurm.yaml
stoix/configs/logger/: base_logger.yaml  ff_az.yaml  ff_d4pg.yaml  ff_ddpg.yaml  ff_dqn.yaml  ff_mpo.yaml  ff_ppo.yaml  ff_reinforce.yaml  ff_sac.yaml  ff_td3.yaml  logger.yaml  rec_ppo.yaml
stoix/configs/network/: chained_torsos.yaml  cnn.yaml  cnn_noisy_dueling_c51.yaml  cnn_rainbow.yaml  efficient_zero.yaml  ffm.yaml  kinetix_entity.yaml  kinetix_flat.yaml  kinetix_pixels.yaml  lru.yaml  memoroid.yaml  mlp.yaml  mlp_c51.yaml  mlp_continuous.yaml  mlp_d4pg.yaml  mlp_ddpg.yaml  mlp_dqn.yaml  mlp_dueling_c51.yaml  mlp_dueling_dqn.yaml  mlp_mpo.yaml  mlp_mpo_continuous.yaml  mlp_noisy_dqn.yaml  mlp_noisy_dueling_c51.yaml  mlp_qr_dqn.yaml  mlp_resnet.yaml  mlp_sac.yaml  mlp_sac_continuous.yaml  mlp_td3.yaml  muzero.yaml  resnet.yaml  rnn.yaml  rnn_dqn.yaml  rnn_dueling_dqn.yaml  s5.yaml  sampled_muzero.yaml  stacked_lrm.yaml  stochastic_muzero.yaml  visual_resnet.yaml  visual_resnet_shared_torso.yaml
stoix/configs/system/: ff_awr.yaml  ff_az.yaml  ff_c51.yaml  ff_d4pg.yaml  ff_ddpg.yaml  ff_dpo.yaml  ff_dqn.yaml  ff_dqn_reg.yaml  ff_mdqn.yaml  ff_mpo.yaml  ff_mpo_continuous.yaml  ff_mz.yaml  ff_ppo.yaml  ff_qr_dqn.yaml  ff_rainbow.yaml  ff_reinforce.yaml  ff_sac.yaml  ff_sampled_az.yaml  ff_sampled_mz.yaml  ff_stochastic_mz.yaml  ff_td3.yaml  ff_vmpo.yaml  ff_vmpo_continuous.yaml  muzero.yaml  rec_ppo.yaml
stoix/networks/: base.py  distributions.py  dueling.py  ffm.py  ffm_edan.py  heads.py  inputs.py  kinetix.py  layers.py  memoroid.py  model_based.py  postprocessors.py  recurrent.py  resnet.py  torso.py  utils.py  working_demo.py  working_demov2.py
stoix/networks/lrm/: base.py  ffm.py  lru.py  s5.py  shared.py  utils.py
stoix/networks/memoroids/: base.py  ffm.py  layers.py  lru.py  s5.py  types.py  working_demov2.py
stoix/networks/specialised/: disco103.py  kinetix.py
stoix/systems/awr/: README.md  awr_types.py  ff_awr.py  ff_awr_continuous.py
stoix/systems/d4pg/: ff_d4pg.py  types.py
stoix/systems/ddpg/: README.md  ddpg_types.py  ff_d4pg.py  ff_ddpg.py  ff_td3.py  types.py
stoix/systems/disco_rl/: disco_rl_types.py
stoix/systems/es/: es_types.py  fitness_shaping.py
stoix/systems/impala/: README.md  impala_types.py
stoix/systems/mpo/: README.md  continuous_loss.py  discrete_loss.py  ff_mpo.py  ff_mpo_continuous.py  ff_vmpo.py  ff_vmpo_continuous.py  mpo_types.py  types.py  utils.py
stoix/systems/ppo/: README.md  ff_dpo_continuous.py  ff_ppo.py  ff_ppo_continuous.py  ff_ppo_penalty.py  ff_ppo_penalty_continuous.py  ppo_types.py  rec_ppo.py  rec_ppo_temp_ffm.py  types.py
stoix/systems/q_learning/: README.md  dqn_types.py  ff_c51.py  ff_ddqn.py  ff_dqn.py  ff_dqn_reg.py  ff_dueling_dqn.py  ff_mdqn.py  ff_noisy_dqn.py  ff_pqn.py  ff_qr_dqn.py  ff_rainbow.py  rec_r2d2.py  types.py
stoix/systems/sac/: README.md  ff_sac.py  ff_sac_continuous.py  sac_types.py  types.py
stoix/systems/search/: README.md  evaluator.py  ff_az.py  ff_ez.py  ff_mz.py  ff_sampled_az.py  ff_sampled_mz.py  ff_stochastic_mz.py  muzero.py  search_types.py  types.py
stoix/systems/self-play/: ff_dqn.py
stoix/systems/spo/: ff_spo.py  ff_spo_continuous.py  spo_types.py
stoix/systems/vpg/: README.md  ff_reinforce.py  ff_reinforce_continuous.py  types.py  vpg_types.py
stoix/tests/: README.md  conftest.py  multistep_test.py
stoix/tests/performance_tests/: .gitignore  README.md  main.py
stoix/utils/: checkpointing.py  debug_env.py  download.py  env_factory.py  jax_utils.py  logger.py  loss.py  make_env.py  multistep.py  optimisers.py  running_statistics.py  sebulba_utils.py  timing_utils.py  total_timestep_checker.py  training.py
stoix/wrappers/: __init__.py  base.py  brax.py  envpool.py  episode_metrics.py  frame_stacking.py  gym.py  gymnasium.py  gymnax.py  jax_to_factory.py  jaxmarl.py  jumanji.py  kinetix.py  navix.py  pgx.py  playground.py  transforms.py  truncation.py  xminigrid.py
tests/: README.md  conftest.py
tests/performance_tests/: README.md  main.py
tests/performance_tests/framework/: registry.py  runner.py  utils.py
(+226 files in other folders)
