[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
namespace_packages = true
incremental = false
cache_dir = ""
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
allow_redefinition = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
strict_equality = true
explicit_package_bases = true
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "mpl_toolkits.*",
    "gym.*",
    "pytest_mock.*",
    "numpy.*",
    "dm_env.*",
    "tree.*",
    "pytest.*",
    "IPython.*",
    "optax.*",
    "tqdm.*",
    "rlax.*",
    "neptune.*",
    "tensorboardX.*",
    "scipy.*",
    "hydra.*",
    "omegaconf.*",
]

[tool.flake8]
select = ["A","B","C","D","E","F","G","I","N","T","W"]
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "proto/*",
    "*.pyc",
    "*.egg-info",
    ".cache",
    ".eggs",
]
max-line-length=105
max-cognitive-complexity=20
import-order-style = "google"
application-import-names = "stoix"
doctests = true
docstring-convention = "google"
per-file-ignores = "__init__.py:F401"

ignore = [
    "A002",
    "A003",
    "D107",
    "E266",
    "E731",
    "W503",
    "B017",
    "E203",
    "B009",
]


[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ['stoix*']

[tool.setuptools.dynamic]
version = {attr = "stoix.__version__"}

[tool.uv.sources]
# Use flashbax from PyPI (has jax>=0.4.25 with no upper bound)
flashbax = { git = "https://github.com/instadeepai/flashbax", rev = "main" }
# Use optax from PyPI instead of git
# gymnax from git for latest compatibility
gymnax = { git = "https://github.com/RobertTLange/gymnax.git", rev = "main" }
# stoa from git
stoa-env = { git = "https://github.com/EdanToledo/Stoa.git", rev = "main" }


[project]
name = "stoix"
readme = "README.md"
description = "Single-Agent Reinforcement Learning with JAX - Minimal fork for JAX 0.7+"
authors = [
    {name = "Edan Toledo"},
  ]
dynamic = ["version"]
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    # Core JAX ML stack - updated for JAX 0.7+
    "jax>=0.7.0",
    "jaxlib>=0.4.38",
    "flax>=0.10.5",
    "optax>=0.2.0",
    "chex>=0.1.89",
    "distrax>=0.1.7",
    "rlax>=0.1.6",
    "orbax-checkpoint>=0.11.25",  # Need recent version for JAX 0.7+ compatibility

    # Replay buffers with buffer donation
    "flashbax @ git+https://github.com/instadeepai/flashbax@main",

    # Environment APIs
    "gymnasium>=1.1.1",
    "gymnax @ git+https://github.com/RobertTLange/gymnax.git@main",
    "jumanji>=1.0.0",
    "stoa-env[gymnax,jumanji] @ git+https://github.com/EdanToledo/Stoa.git@main",

    # Configuration
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",

    # Utilities
    "numpy>=2.0",
    "colorama>=0.4.6",
    "tqdm>=4.67.1",
    "tensorboard-logger>=0.1.0",
    "dm-tree>=0.1.9",  # Explicitly add to get pre-built wheel
    "tfp-nightly",  # tensorflow_probability nightly - has pre-built wheels

    # Search algorithms (MuZero, AlphaZero)
    "mctx>=0.0.5",
]

[dependency-groups]
dev = [
  "black", "coverage", "flake8", "importlib-metadata", "isort", "livereload",
  "mkdocs", "mkdocs-git-revision-date-plugin", "mkdocs-include-markdown-plugin",
  "mkdocs-material", "mkdocs-mermaid2-plugin", "mkdocstrings", "mknotebooks",
  "mypy", "nbmake", "pre-commit", "promise", "pymdown-extensions", "pytest",
  "pytest-cov", "pytest-mock", "pytest-parallel", "pytest-xdist", "pytype",
  "testfixtures",
]

[project.urls]
"Homepage" = "https://github.com/EdanToledo/Stoix"
"Bug Tracker" = "https://github.com/EdanToledo/Stoix/issues"
